# Geometry-Dash-Vision-RL

./: .gitignore  PROGRESS.md  README.md  pyproject.toml  requirements.txt
artifacts/milestone3/tables/: cnn_eval.csv  cnn_training.csv  comparison.csv  random_baseline.csv
levels/: example_level.json  level_1.json  tiny_spikes.json
levels/curriculum/: flat_empty.json  late_spike.json  mixed_spikes.json  one_spike.json  two_spikes.json
reports/milestone3/: slides.html  slides.md
scripts/: eval_policy.py  eval_random.py  eval_visual_baseline.py  generate_levels.py  play_level.py  render_milestone3_artifacts.py  rollout_level.py  run_editor.py  run_milestone3_eval.py  train_ppo.py  train_ppo_curriculum.py  train_reinforce.py
src/gdrl/: __init__.py  config.py
src/gdrl/editor/: __init__.py  editor_app.py  editor_state.py
src/gdrl/envs/: __init__.py  gym_env.py
src/gdrl/experiments/: __init__.py  rollout.py
src/gdrl/input/: __init__.py  base.py  human.py  scripted.py
src/gdrl/levels/: __init__.py  level_io.py  level_schema.py  simple_gen.py  validation.py
src/gdrl/logging/: __init__.py  trajectory_logger.py
src/gdrl/sim/: __init__.py  collision.py  events.py  observations.py  physics.py  renderer.py  simulator.py
src/gdrl/training/: __init__.py  baselines.py  policy_net.py  ppo.py  reinforce.py  visual_baseline.py
tests/: test_baselines.py  test_editor_state.py  test_gym_env.py  test_physics.py  test_policy_net.py  test_ppo.py  test_reinforce.py  test_rollout.py  test_simple_gen.py  test_trajectory_logger.py  test_visual_baseline.py
