[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gdrl"
version = "0.1.0"
description = "Geometry Dash-like simulator and vision RL environment"
requires-python = ">=3.10"
dependencies = [
  "pygame",
  "numpy",
  "gymnasium",
  "torch",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
